--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,47 @@
 	path = moodle/mod/scheduler
 	url = https://github.com/bostelm/moodle-mod_scheduler.git
 	branch = MOODLE_400_STABLE
+[submodule "moodle/question/type/oumultiresponse"]
+	path = moodle/question/type/oumultiresponse
+	url = https://github.com/moodleou/moodle-qtype_oumultiresponse.git
+	branch = main
+[submodule "moodle/question/type/vplquestion"]
+	path = moodle/question/type/vplquestion
+	url = https://gricad-gitlab.univ-grenoble-alpes.fr/moodle-plugins/moodle-qtype_vplquestion.git
+	branch = master
+[submodule "moodle/question/type/combined"]
+	path = moodle/question/type/combined
+	url = https://github.com/moodleou/moodle-qtype_combined.git
+	branch = main
+[submodule "moodle/question/type/essayautograde"]
+	path = moodle/question/type/essayautograde
+	url = https://github.com/gbateson/moodle-qtype_essayautograde.git
+	branch = master
+[submodule "moodle/question/behaviour/adaptive_adapted_for_coderunner"]
+	path = moodle/question/behaviour/adaptive_adapted_for_coderunner
+	url = https://github.com/trampgeek/moodle-qbehaviour_adaptive_adapted_for_coderunner.git
+	branch = master
+[submodule "moodle/question/type/coderunner"]
+	path = moodle/question/type/coderunner
+	url = https://github.com/trampgeek/moodle-qtype_coderunner.git
+	branch = master
+[submodule "moodle/question/type/pmatch"]
+	path = moodle/question/type/pmatch
+	url = https://github.com/moodleou/moodle-qtype_pmatch.git
+	branch = main
+[submodule "moodle/question/type/varnumericset"]
+	path = moodle/question/type/varnumericset
+	url = https://github.com/moodleou/moodle-qtype_varnumericset.git
+	branch = main
+[submodule "moodle/question/type/varnumeric"]
+	path = moodle/question/type/varnumeric
+	url = https://github.com/moodleou/moodle-qtype_varnumeric.git
+	branch = main
+[submodule "moodle/question/type/varnumunit"]
+	path = moodle/question/type/varnumunit
+	url = https://github.com/moodleou/moodle-qtype_varnumunit.git
+	branch = main
+[submodule "moodle/lib/editor/ousupsub"]
+	path = moodle/lib/editor/ousupsub
+	url = https://github.com/moodleou/moodle-editor_ousupsub.git
+	branch = main
