Added LOCAL, ADMIN and ENROL section!

--- a/.gitmodules
+++ b/.gitmodules
@@ -150,3 +150,19 @@
 	path = moodle/availability/condition/coursecompleted
 	url = https://github.com/ewallah/moodle-availability_coursecompleted.git
 	branch = main
+[submodule "moodle/local/sandbox"]
+	path = moodle/local/sandbox
+	url = https://github.com/moodleuulm/moodle-local_sandbox.git
+	branch = MOODLE_405_STABLE
+[submodule "moodle/admin/tool/coursearchiver"]
+	path = moodle/admin/tool/coursearchiver
+	url = https://github.com/Syxton/moodle-tool_coursearchiver.git
+	branch = master
+[submodule "moodle/admin/tool/certificate"]
+	path = moodle/admin/tool/certificate
+	url = https://github.com/moodleworkplace/moodle-tool_certificate.git
+	branch = MOODLE_400_STABLE
+[submodule "moodle/enrol/autoenrol"]
+	path = moodle/enrol/autoenrol
+	url = https://github.com/bobopinna/moodle-enrol_autoenrol.git
+	branch = master
