Added FORMAT, USER and THEME sections!

--- a/.gitmodules
+++ b/.gitmodules
@@ -166,3 +166,23 @@
 	path = moodle/enrol/autoenrol
 	url = https://github.com/bobopinna/moodle-enrol_autoenrol.git
 	branch = master
+[submodule "moodle/course/format/softcourse"]
+	path = moodle/course/format/softcourse
+	url = https://github.com/DigiDago/moodle-format_softcourse.git
+	branch = MOODLE_405_STABLE
+[submodule "moodle/course/format/tiles"]
+	path = moodle/course/format/tiles
+	url = https://bitbucket.org/dw8/moodle-format_tiles.git
+	branch = moodle44
+[submodule "moodle/course/format/etask"]
+	path = moodle/course/format/etask
+	url = https://gitlab.com/drlikm/format_etask.git
+	branch = FORMAT_ETASK_24_STABLE
+[submodule "moodle/user/profile/field/brasilufmunicipio"]
+	path = moodle/user/profile/field/brasilufmunicipio
+	url = https://gitlab.com/adapta/moodle-profilefield_brasilufmunicipio.git
+	branch = main
+[submodule "moodle/theme/academi"]
+	path = moodle/theme/academi
+	url = https://github.com/ProjetoSophiaDev/academi.git
+	branch = main
