--- a/.gitmodules
+++ b/.gitmodules
@@ -194,3 +194,7 @@
 	path = moodle/local/aws
 	url = https://github.com/catalyst/moodle-local_aws.git
 	branch = master
+[submodule "moodle/admin/tool/s3logs"]
+	path = moodle/admin/tool/s3logs
+	url = https://github.com/catalyst/moodle-tool_s3logs.git
+	branch = master
