--- a/.gitmodules
+++ b/.gitmodules
@@ -198,3 +198,7 @@
 	path = moodle/admin/tool/s3logs
 	url = https://github.com/catalyst/moodle-tool_s3logs.git
 	branch = master
+[submodule "moodle/course/format/buttons"]
+	path = moodle/course/format/buttons
+	url = https://github.com/jrangelardila/moodle-format_buttons.git
+	branch = master
