--- a/.gitmodules
+++ b/.gitmodules
@@ -202,3 +202,7 @@
 	path = moodle/course/format/buttons
 	url = https://github.com/jrangelardila/moodle-format_buttons.git
 	branch = 4.x
+[submodule "moodle/mod/subcourse"]
+	path = moodle/mod/subcourse
+	url = https://github.com/mudrd8mz/moodle-mod_subcourse.git
+	branch = MOODLE_405_STABLE
