--- a/.gitmodules
+++ b/.gitmodules
@@ -202,3 +202,7 @@
 	path = moodle/admin/tool/s3logs
 	url = https://github.com/catalyst/moodle-tool_s3logs.git
 	branch = MOODLE_405_STABLE
+[submodule "moodle/admin/tool/objectfs"]
+	path = moodle/admin/tool/objectfs
+	url = https://github.com/catalyst/moodle-tool_objectfs.git
+	branch = MOODLE_404_STABLE
