Changed branch to 4.x-4.5-branch for submodule admin/tool/coursearchiver

--- a/.gitmodules
+++ b/.gitmodules
@@ -202,3 +202,7 @@
 	path = moodle/admin/tool/objectfs
 	url = https://github.com/catalyst/moodle-tool_objectfs.git
 	branch = MOODLE_404_STABLE
+[submodule "moodle/admin/tool/coursearchiver"]
+	path = moodle/admin/tool/coursearchiver
+	url = https://github.com/Syxton/moodle-tool_coursearchiver.git
+	branch = 4.x-4.5-branch
